# rugit

./: AGENTS.md  Cargo.toml  demo-setup.sh  demo.tape  project.org  readme.org
src/: app.rs  config.rs  keybindings.rs  main.rs
src/backend/: git.rs  jj.rs  mod.rs
src/ui/: editor.rs  log.rs  mod.rs  popup.rs  status.rs
