[package]
name = "rugit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rugit"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.29"
git2       = "0.20"
ratatui    = "0.30"
serde      = { version = "1", features = ["derive"] }
similar    = { version = "2", features = ["text"] }
toml       = "0.8"
